Added Swagger documentation for users endpoints
